2008-08-05  Behdad Esfahbod  <behdad@gnome.org>

	Bug 546371 – Improve docs re g_file_monitor

	* gfilemonitor.c: Mention g_file_monitor() in the docs.

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.6 ===

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.5 ===

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	Bug 546017 – Don't copy attributes when copying a symlink

	* gfile.c (g_file_copy_attributes): Specify
	G_FILE_QUERY_INFO_NOFOLLOW_SYMLINKS in the call to 
	g_file_set_attributes_from_info. Patch by Christian Kellner

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* gemblemedicon.[hc]: 
	* gio.symbols:
	* gemblem.[hc]: Add GEmblem to make the emblem mechanism
	a bit more extensible. Work by Clemens Buss.

	* gioenums.h: Add GEmblemOrigin.
	* Makefile.am: Glue

2008-08-03  Carlos Garcia Campos  <carlosgc@gnome.org>

	Bug 546079 – leak in xdgmime
	
	* xdgmime/xdgmime.c (xdg_mime_shutdown): Fix memory leak.
	
2008-08-03  Tor Lillqvist  <tml@novell.com>

	* win32/gwin32directorymonitor.h
	* win32/gwin32directorymonitor.c: Whitespace cleanup to match GLib
	style.

2008-08-03  Tor Lillqvist  <tml@novell.com>

	* win32/gwin32directorymonitor.c
	(g_win32_directory_monitor_callback): Make prototype match
	LPOVERLAPPED_COMPLETION_ROUTINE to avoid warning. Cast
	LPOVERLAPPED parameter to local GWin32DirectoryMonitorPrivate
	pointer.

	(g_win32_directory_monitor_constructor):
	GLocalDirectoryMonitor::dirname is in UTF-8 like all other file
	names in the GLib API on Windows, so convert to UTF-16 and open
	with CreateFileW().

2008-08-03  Tor Lillqvist  <tml@novell.com>

	Bug 541036 - Gnumeric crashes when trying to open Desktop or
	user's folder under Windows

	* win32/gwin32directorymonitor.c
	(g_win32_directory_monitor_constructor): Ignore error from
	CreateFile() when opening directory. Instead of asserting, just
	store INVALID_HANDLE_VALUE then in